# test_rust_stm32

./: .cproject  .gitignore  .mxproject  README.md  test2.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h
Core/Src/: app_freertos.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
librs/: Cargo.toml
librs/.cargo/: config.toml
librs/src/: lib.rs
stm32_crates/itm_debug/: Cargo.toml
stm32_crates/itm_debug/.cargo/: config.toml
stm32_crates/itm_debug/src/: itm.rs  lib.rs
