[package]
name = "librs"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic ="abort"
opt-level = 3


[profile.release]
panic ="abort"
opt-level = 3

#[profile.test]
#panic ="abort"

[lib]
crate-type=["staticlib"]

[dependencies]
#cortex-m = { path="/Users/danielbraun/devel/ruststm/cortex-m/cortex-m", features=["onechar_itm"] }
#panic-itm = { path="/Users/danielbraun/devel/ruststm/cortex-m/panic-itm", features=["onechar_itm"] }
cortex-m = { version="0.7.7", feature=["critical-section-single-core"] }
panic-itm = "0.4.2"
critical-section="*"

#[dependencies.stm32g4]
#version = "0.15.1"
#features = ["stm32g431"]
[dependencies.stm32g4-staging]
#path = "/Users/danielbraun/devel/ruststm/stm32-rs/stm32g4"
version = "0.19.0"
features = ["stm32g491"]
