[package]
authors = [
    "Daniel Braun"
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low footprint ITM cell based debug"
license = "GPLv3"
#documentation = "https://docs.rs/cortex-m"

name = "itm-debug"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
panic ="abort"

[profile.release]
opt-level = 3
panic ="abort"

links = "itm-debug-m"

#[lib]
#crate-type=["staticlib"]

[target.'cfg(target_os="none")'.dependencies]
cortex-m = { version="0.7.7", feature=["critical-section-single-core"] }
#panic-itm = "0.4.2"
#critical-section="*"
#stm32g4-staging = { version = "0.19.0", features = ["stm32g491"] }

[package.metadata.docs.rs]
targets = [
    "thumbv8m.main-none-eabihf",
    "thumbv6m-none-eabi",
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
    "thumbv8m.base-none-eabi",
    "thumbv8m.main-none-eabi"
]
